<resources>
    <string name="app_name">Diet Tracker</string>
    <string name="welcome_description">Mantenha sua dieta em dia</string>
    <string name="login_welcome">Entrar</string>
    <string name="register_welcome">Registrar-se</string>
    <string name="register">Registro</string>
    <string name="comeback">voltar</string>
    <string name="required">Obrigatório*</string>
    <string name="who_are_you">Quem é você?</string>
    <string name="lastname">Sobrenome</string>
    <string name="firstname">Nome</string>
    <string name="next">Avançar</string>
    <string name="character_limit_reached">Limite de caracteres atingido</string>
    <string name="what_is_your_height">Qual é a sua altura?</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="what_is_your_weight">Quanto você pesa?</string>
    <string name="invalid_value">Valor inválido</string>
</resources>